syntax = "proto3";

package question;

service QuestionService {
  rpc GetQuestionsByTitle (TitleRequest) returns (QuestionsResponse);
  rpc GetQuestionsByType (TypeRequest) returns (QuestionsResponse);
}

message TitleRequest {
  string title = 1;
  int32 pageNumber = 2;
  int32 pageSize = 3;
}

message TypeRequest {
  string type = 1;
  int32 pageNumber = 2;
  int32 pageSize = 3;
}

message QuestionsResponse {
  repeated Question questions = 1;
  int32 totalQuestions = 2;
}

message Question {
  string type = 1;
  string title = 2;
  string solution = 3;

  string anagramType = 4;
  repeated Block blocks = 5;

  repeated Option options = 6;
  
  string siblingId = 7;
}

message Block {
  string text = 1;
  bool showInOption = 2;
  bool isAnswer = 3;
}

message Option {
  string text = 1;
  bool isCorrectAnswer = 2;
}
